# nav2_social_costmap_plugin

./: CMakeLists.txt  LICENSE  README.md  package.xml  social_layer.xml
include/nav2_social_costmap_plugin/: social_layer.hpp
src/: social_layer.cpp
